Fixes Across Classes